# todolist_application

./: .gitignore  pyproject.toml
src/todolist_application/: main.py  query_adapter_dependencies.py  read_adapter_dependencies_for_demo.py  write_adapter_dependencies_for_demo.py
src/todolist_application/infra/: fvp_memory.py  memory.py
src/todolist_application/infra/sqlite/: sdk.py  type.py
src/todolist_application/read/todolist/: port.py
src/todolist_application/secondary/: calendar.py  datetime_provider.py
src/todolist_application/secondary/fvp/write/: fvp_session_set_in_memory.py  fvp_session_set_sqlite.py  session_set_sqlite.py
src/todolist_application/secondary/todolist/: markdown_todolist.py  task_key_generator_random.py
src/todolist_application/secondary/todolist/todolist_set/: todolist_set_in_memory.py  todolist_set_sqlite.py
src/todolist_application/secondary/user/: user_repository_in_memory.py
tests/secondary/fvp/write/: __init__.py  base_test_session_set.py  test_fvp_session_set_in_memory.py  test_session_set_sqlite.py
tests/secondary/todolist/: test_external_todolist_markdown.py
tests/secondary/todolist/read/: test_all_tasks_in_memory.py
tests/secondary/todolist/todolist_set/: __init__.py  base_test_todolist_set.py  test_todolist_set_in_memory.py  test_todolist_set_sqlite.py
tests/secondary/todolist/todolist_set_read/: __init__.py  base_test_todolist_set_read.py  test_todolist_set_read_memory.py  test_todolist_set_read_sqlite.py
tests/secondary/user/: test_user_repository_in_memory.py
(+9 files in other folders)
