[project]
name = "todolist-application"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan LAURENT",email = "johjo@ytreza.org"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "todolist-hexagon @ git+https://github.com/Johjo/todolist_hexagon",
    "mypy (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "todolist_application", from = "src"}]

[tool.poetry.dependencies]
todolist-hexagon = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
